<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <groupId>com.xaaef.molly</groupId>
    <artifactId>molly-multi-tenant</artifactId>
    <version>1.0.1</version>
    <name>molly-multi-tenant</name>

    <modules>
        <module>common</module>
        <module>internal-api</module>

        <module>molly-monitor</module>
        <module>molly-pms</module>
        <module>molly-cms</module>
        <module>molly-sys</module>

        <module>molly-service</module>

        <module>plugins/mbp-tenant</module>
        <module>plugins/auth-jwt</module>
        <module>plugins/redis-config</module>
        <module>plugins/web-config</module>
    </modules>

    <description>
        molly mybatis-plus multi tenant SaaS platform
    </description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven-compiler.version>3.11.0</maven-compiler.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- x-file-storage文件上传 文档地址 https://x-file-storage.xuyanwu.cn -->
        <storage.version>2.0.0</storage.version>
        <!-- 七牛云文件上传 -->
        <qiniu-storage.version>7.14.0</qiniu-storage.version>
        <!-- 阿里云文件上传 -->
        <aliyun-storage.version>3.17.2</aliyun-storage.version>
        <!-- 服务器运行状态查询， 如: CPU、磁盘、内存 -->
        <oshi.version>6.4.6</oshi.version>
        <!-- Excel文件操作 -->
        <apache-poi.version>5.2.4</apache-poi.version>
        <!-- 小而美的工具库 -->
        <hutool.version>5.8.23</hutool.version>
        <!-- 简单、方便的OpenAPI接口文档 -->
        <knife4j.version>4.3.0</knife4j.version>
        <!-- MyBatis 的增强工具，基友搭配，效率翻倍 -->
        <mybatis-plus.version>3.5.4.1</mybatis-plus.version>
        <!-- JavaEE颠覆者 -->
        <spring-boot.version>3.1.5</spring-boot.version>
    </properties>


    <dependencies>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>

        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-ui</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!--
                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-devtools</artifactId>
                    <scope>runtime</scope>
                    <optional>true</optional>
                </dependency>
        -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-bom</artifactId>
                <version>${hutool.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-dependencies</artifactId>
                <version>${knife4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
